<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_earn_money"
            android:icon="@drawable/baseline_attach_money_black_18dp"
            android:title="@string/earn_money" />
        <item
            android:id="@+id/nav_today_earnings"
            android:icon="@drawable/baseline_redeem_black_18dp"
            android:title="@string/today_earnings" />
        <item
            android:id="@+id/nav_month_earnings"
            android:icon="@drawable/baseline_month_black_18dp"
            android:title="@string/monthly_earnings" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/baseline_sentiment_very_satisfied_black_18dp"
            android:title="@string/profile" />
        <item
            android:id="@+id/nav_exit"
            android:icon="@drawable/exit"
            android:title="@string/exit" />
    </group>

</menu>
